<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#98FB98"> <!-- Light Green Background -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".activity.dashboard.DashboardActivity">

        <TextView
            android:id="@+id/BillHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:gravity="center"
            android:padding="5dp"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/billExpandToggle"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/bill_fragment_label" />

        <ImageButton
            android:id="@+id/billExpandToggle"
            android:contentDescription="Expand/Collapse"
            android:layout_width="48dp"
            android:layout_height="48dp"
            app:layout_constraintStart_toEndOf="@id/BillHeader"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/arrow_down_float" />

        <TextView
            android:id="@+id/BillMainReadout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="50sp"
            android:text="@string/dummy_billReadout"
            app:layout_constraintTop_toBottomOf="@id/BillHeader"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/BillMainReadoutSubtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="@string/dummy_billReadoutSubtext"
            app:layout_constraintTop_toBottomOf="@id/BillMainReadout"
            app:layout_constraintStart_toStartOf="parent"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/BillBlurb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:padding="10dp"
            android:layout_margin="5dp"
            android:background="@drawable/background_outline"
            android:text="@string/dummy_billBlurb"
            app:layout_constraintTop_toBottomOf="@id/BillMainReadoutSubtext"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <LinearLayout
            android:id="@+id/billExpandedText"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/BillBlurb"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:text="@string/dummy_billExpanded"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/billExpandedGraphTitle"
                app:layout_constraintBottom_toTopOf="@id/billExpandedGraph"
                android:layout_marginBottom="5dp" />

            <com.github.mikephil.charting.charts.LineChart
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:id="@+id/billExpandedGraph"
                app:layout_constraintTop_toBottomOf="@id/billExpandedGraphTitle"
                app:layout_constraintStart_toStartOf="parent" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
