<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.dashboard.DashboardActivity"
    android:background="#ADD8E6"> <!-- Light Blue Background -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="16dp">

        <TextView
            android:id="@+id/PowerUsageHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:padding="5dp"
            android:gravity="center"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/powerUsageExpandToggle"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/powerusage_fragment_label" />

        <ImageButton
            android:id="@+id/powerUsageExpandToggle"
            android:contentDescription="Expand/Collapse"
            android:layout_width="48dp"
            android:layout_height="48dp"
            app:layout_constraintStart_toEndOf="@id/PowerUsageHeader"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/arrow_down_float" />

        <TextView
            android:id="@+id/PowerUsageMainReadout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="50sp"
            android:text="@string/dummy_powerUsageReadout"
            app:layout_constraintTop_toBottomOf="@id/PowerUsageHeader"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/PowerUsageMainReadoutSubtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="Daily Consumption"
            app:layout_constraintTop_toBottomOf="@id/PowerUsageMainReadout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/barChart"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            app:layout_constraintTop_toBottomOf="@id/PowerUsageMainReadoutSubtext"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="30dp"
            app:layout_goneMarginTop="10dp"
            android:layout_marginTop="10dp"
            app:backgroundColor="@android:color/white" />

        <TextView
            android:id="@+id/PowerUsageBlurb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="5dp"

            android:background="@drawable/background_outline"
            android:padding="10dp"
            android:text="@string/dummy_powerUsageBlurb"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/barChart" />

        <com.github.mikephil.charting.charts.PieChart
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/devicePieChart"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/PowerUsageBlurb"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TableLayout
            android:id="@+id/powerUsageExpandedText"
            android:stretchColumns="*"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/devicePieChart"
            app:layout_constraintBottom_toTopOf="@id/manageDevicesButton"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@drawable/background_outline_sharp"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="10dp">

            <TableRow>
                <TextView
                    android:text="Device"
                    android:layout_width="0dp"
                    android:gravity="center"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:layout_weight="1"
                    android:padding="10dp"
                    android:textStyle="bold" />

                <TextView
                    android:text="Usage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:padding="10dp"
                    android:textStyle="bold" />
            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/manageDevicesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintTop_toBottomOf="@id/powerUsageExpandedText"
            app:layout_constraintStart_toStartOf="parent"
            android:text="Manage Devices"
            app:layout_constraintEnd_toEndOf="parent" />

        <!--
        ..<Button
            android:id="@+id/testNotificationButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Tes"
            app:layout_constraintTop_toBottomOf="@id/manageDevicesButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
         -->
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
